--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,14 +28,14 @@ jobs:
     - name: Run script
       run: python ${{ github.workspace }}/collect_ips.py
         
-    - name: Commit and push changes
-      run: |
-        git config --global user.email "tianshideyou@proton.me"
-        git config --global user.name "tianshipapa"
-        if [ -n "$(git status --porcelain)" ]; then
-          git add ip.txt
-          git commit -m "Automatic update"
-          git push
-        else
-          echo "No changes detected, skipping commit."
-        fi
+- name: Commit and push changes
+  run: |
+    git config --global user.email "tianshideyou@proton.me"
+    git config --global user.name "tianshipapa"
+    if [ -n "$(git status --porcelain)" ]; then
+      git add ip.txt
+      git commit -m "Automatic update"
+      git push https://x-access-token:${{ secrets.PERSONAL_ACCESS_TOKEN }}@github.com/nicoleokme/CF-IP.git
+    else
+      echo "No changes detected, skipping commit."
+    fi
